--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.21",
+    "vuebar": "^0.0.20",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0-beta.53",
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
+    "vue-cli-plugin-bootstrap-vue": "^0.1.0",
     "vue-template-compiler": "^2.5.21"
   },
   "postcss": {
